Updated the logo and the visibily issue

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -11,6 +11,8 @@
     font-family: 'Libre Baskerville', serif;
     font-size: 2rem;
     color: var(--charcoal-grey);
+    width: 150px;
+    height: 50px;
   }
   
   .nav-links {
